# python-elasticsearch-logger

./: LICENSE  README.md  pyproject.toml
logger_es_handler/: handlers.py  serializers.py
tests/: test_logger_es_handler.py  test_logger_es_serializer.py
