[tool.poetry]
name = "logger-es-handler"
version = "0.1.3"
description = "ES handler for logging module "
authors = ["Gustavo Freitas <gustavo@gmf-tech.com>"]

[tool.poetry.dependencies]
python = "^3.7"
elasticsearch = "^7.13.0"
requests = "^2.25.1"
requests-kerberos = {version = "^0.12.0", optional = true}
requests-aws4auth = {version = "^1.1.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
